--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
 		
 		<script type="text/javascript" src="cordova.js"></script>
-	    <script type="text/javascript" src="js/vRoom/phaser.min.js"></script>
-	    <script type="text/javascript" src="js/vRoom/boot.js"></script>
-	    <script type="text/javascript" src="js/vRoom/preloader.js"></script>
-	    <script type="text/javascript" src="js/vRoom/main.js"></script>
+	    <script type="text/javascript" src="js/urban/phaser.min.js"></script>
+	    <script type="text/javascript" src="js/urban/boot.js"></script>
+	    <script type="text/javascript" src="js/urban/preloader.js"></script>
+	    <script type="text/javascript" src="js/urban/main.js"></script>
 	</head>
 	<body style="margin: 0;"><div></div></body>
 </html>
